[package]
name = "everlasting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
bendy = "0.3.3"
chrono = "0.4.24"
color-eyre = "0.6.2"
futures = "0.3.27"
futures-util = "0.3.27"
hex = "0.4.3"
rand = "0.8.5"
reqwest = "0.11.13"
rust-crypto = "0.2.36"
thiserror = "1.0.40"
tokio = { version = "1.22.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url = "2.3.1"
urlencoding = "2.1.2"
