[package]
name = "everlasting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
async-trait = "0.1.68"
bendy = { version = "0.3.3", path = "../bendy" }
byte-unit = "4.0.19"
bytes = "1.4.0"
chrono = "0.4.24"
clap = { version = "4.3.0", features = ["derive", "cargo"] }
color-eyre = "0.6.2"
console-subscriber = "0.1.9"
crossterm = "0.26.1"
dashmap = "5.4.0"
futures = "0.3.27"
futures-util = "0.3.27"
hex = "0.4.3"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = "0.11.13"
rust-crypto = "0.2.36"
thiserror = "1.0.40"
tokio = { version = "1.22.0", features = ["full", "sync"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tui = "0.19.0"
url = "2.3.1"
urlencoding = "2.1.2"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "daemon"
path = "src/bin/daemon.rs"
